Fix #36288, Renderlayer toggles behave unexpected in Outliner. The outliner was using the wrong flag variable for toggling render layers, was setting pass flags instead of the layer on/off flag.